cards and pictures added

--- a/src/pages/newEntry/dateTime/dateTime.html
+++ b/src/pages/newEntry/dateTime/dateTime.html
@@ -6,13 +6,12 @@
 
 <ion-content padding>
 
-  <button id="btnX" (click)="pushHomePage()" ion-button color="light" round icon-only>
-    <ion-icon name='close'></ion-icon>
-  </button>
-
-
-      <p>Wann sind deine Beschwerden aufgetreten?
-      </p>
+  <ion-card>
+    <img class="full-image" src="assets/img/AllyNormal.png"/>
+  <ion-card-content>
+      <p>Wann sind deine Beschwerden aufgetreten?</p>
+    </ion-card-content>
+    </ion-card>  
 
       <ion-item>
         <ion-label>Datum und Zeit</ion-label>
