--- a/src/pages/newEntry/totalPoints/totalPoints.html
+++ b/src/pages/newEntry/totalPoints/totalPoints.html
@@ -6,17 +6,14 @@
 
 <ion-content padding>
 
-  <button id="btnX" (click)="pushHomePage()" ion-button color="light" round icon-only>
-    <ion-icon name='close'></ion-icon>
-  </button>
-
-
-
+  <ion-card>
+    <img class="full-image" src="assets/img/AllyNormal.png"/>
+  <ion-card-content>
   <p>Vielen Dank! Du hast soeben einen Punkt erhalten.</p>
-
   <p>Ich habe deine Daten analysiert. Deine Beschwerden entsprechen
          am ehesten einer Gräserpollenallergie!</p>
-
+       </ion-card-content>
+       </ion-card>
 
   <p>Öffne eine Truhe und hole dir zusätzliche Punkte und einen Tipp.</p>
 
