--- a/src/pages/newEntry/complaints/complaints.html
+++ b/src/pages/newEntry/complaints/complaints.html
@@ -6,13 +6,13 @@
 
 <ion-content padding>
 
-  <button id="btnX" (click)="pushHomePage()" ion-button color="light" round icon-only>
-    <ion-icon name='close'></ion-icon>
-  </button>
-
-
-
+  <ion-card>
+    <img class="full-image" src="assets/img/AllyNormal.png"/>
+  <ion-card-content>
     <p>Gib bitte spontan an, wie stark deine Beschwerden sind?</p>
+  </ion-card-content>
+  </ion-card>
+
           <h5>Augenbeschwerden <ion-icon (click)="showInfoAugenbeschwerden()" name="md-information-circle"></ion-icon></h5>
           <p>(Brennen, Jucken, Tränen)</p>
             <ion-item>
