--- a/src/pages/newEntry/tips/tips.html
+++ b/src/pages/newEntry/tips/tips.html
@@ -5,16 +5,14 @@
 </ion-header>
 
 <ion-content padding>
-
-  <button id="btnX" (click)="pushHomePage()" ion-button color="light" round icon-only>
-    <ion-icon name='close'></ion-icon>
-  </button>
-
-
-
-         <h1>Mein Tipp:</h1>
+  <ion-card>
+    <img class="full-image" src="assets/img/AllyNormal.png"/>
+  <ion-card-content>
+    <ion-card-title>Mein Tipp</ion-card-title>
          <p>Halte dich wenig draussen auf.</p>
          <p>Wasche dir täglich die Haare.</p>
+       </ion-card-content>
+       </ion-card>
 
     <button (click)="pushHomePage()" ion-button secondary icon-left>
       <ion-icon name='close'></ion-icon>Abbrechen
