--- a/src/pages/newEntry/complaints/complaints.html
+++ b/src/pages/newEntry/complaints/complaints.html
@@ -9,7 +9,7 @@
   <ion-card>
     <img class="full-image" src="assets/img/AllyNormal.png"/>
   <ion-card-content>
-    <p>Gib bitte spontan an, wie stark deine Beschwerden sind?</p>
+    <p>Gib bitte spontan an, wie stark Deine Beschwerden sind?</p>
   </ion-card-content>
   </ion-card>
 
