--- a/src/pages/newEntry/dateTime/dateTime.html
+++ b/src/pages/newEntry/dateTime/dateTime.html
@@ -9,9 +9,9 @@
   <ion-card>
     <img class="full-image" src="assets/img/AllyNormal.png"/>
   <ion-card-content>
-      <p>Wann sind deine Beschwerden aufgetreten?</p>
+      <p>Wann sind Deine Beschwerden aufgetreten?</p>
     </ion-card-content>
-    </ion-card>  
+    </ion-card>
 
       <ion-item>
         <ion-label>Datum und Zeit</ion-label>
