--- a/src/pages/newEntry/newEntry.html
+++ b/src/pages/newEntry/newEntry.html
@@ -10,14 +10,10 @@
       <img class="full-image" src="assets/img/AllyNormal.png"/>
     <ion-card-content>
       <ion-card-title>Hallo Tim</ion-card-title>
-       <p>Mit jedem Eintrag, den Du
-         machst, hilfst Du uns eine
-         bessere Übersicht über die
-         aktuelle Pollenbelastung in
-         der Schweiz zu erhalten.</p>
+       <p>Mit jedem Eintrag den Du machst, hilfst Du uns die aktuelle Pollenbelastung besser analysieren zu können.</p>
     </ion-card-content>
     </ion-card>
-  
+
 
   <button (click)="pushHomePage()" ion-button secondary icon-left>
     <ion-icon name='close'></ion-icon>Abbrechen
