--- a/src/pages/newEntry/physicalActivity/physicalActivity.html
+++ b/src/pages/newEntry/physicalActivity/physicalActivity.html
@@ -9,7 +9,7 @@
   <ion-card>
     <img class="full-image" src="assets/img/AllyNormal.png"/>
   <ion-card-content>
-  <p>Wie stark hast Du dich körperlich betätigt?</p>
+  <p>Wie stark hast Du Dich körperlich betätigt?</p>
 </ion-card-content>
 </ion-card>
 
