--- a/src/pages/newEntry/tips/tips.html
+++ b/src/pages/newEntry/tips/tips.html
@@ -9,8 +9,8 @@
     <img class="full-image" src="assets/img/AllyNormal.png"/>
   <ion-card-content>
     <ion-card-title>Mein Tipp</ion-card-title>
-         <p>Halte dich wenig draussen auf.</p>
-         <p>Wasche dir täglich die Haare.</p>
+         <p>Halte Dich wenig draussen auf.</p>
+         <p>Wasche Dir täglich die Haare.</p>
        </ion-card-content>
        </ion-card>
 
