--- a/src/pages/newEntry/totalPoints/totalPoints.html
+++ b/src/pages/newEntry/totalPoints/totalPoints.html
@@ -10,7 +10,7 @@
     <img class="full-image" src="assets/img/AllyNormal.png"/>
   <ion-card-content>
   <p>Vielen Dank! Du hast soeben einen Punkt erhalten.</p>
-  <p>Ich habe deine Daten analysiert. Deine Beschwerden entsprechen
+  <p>Ich habe Deine Daten analysiert. Deine Beschwerden entsprechen
          am ehesten einer Gräserpollenallergie!</p>
        </ion-card-content>
        </ion-card>
