Google Maps added

--- a/src/index.html
+++ b/src/index.html
@@ -41,5 +41,8 @@
   <!-- The main bundle js is generated during the build process -->
   <script src="build/main.js"></script>
 
+  <!--Google Maps -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDm3z0pLcQJKzN05mw9vZoQHluVKj7HJfU" asynch defer </script>
+
 </body>
 </html>
