--- a/src/pages/community/community.html
+++ b/src/pages/community/community.html
@@ -5,6 +5,8 @@
 </ion-header>
 
 <ion-content padding>
-    <button ion-button block>
-      Test</button>
+  <div><label>Augenbeschwerden&nbsp;&nbsp;&nbsp;</label><img src="../assets/img/roterPunkt.png"></div>
+  <div><label>Nasenbeschwerden&nbsp;&nbsp;&nbsp;</label><img src="../assets/img/blauerPunkt.png"></div>
+  <div><label>Atembeschwerden&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label><img src="../assets/img/gruenerPunkt.png"></div>
+  <div #map id="my-map"></div>
 </ion-content>
