--- a/www/index.html
+++ b/www/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-  <script data-ionic="inject">
-    (function(w){var i=w.Ionic=w.Ionic||{};i.version='^3.8.0';i.angular='4.4.2';i.staticDir='build/';})(window);
-  </script>
   <meta charset="UTF-8">
   <title>MiDemo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -43,6 +40,9 @@
 
   <!-- The main bundle js is generated during the build process -->
   <script src="build/main.js"></script>
+
+  <!--Google Maps -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDm3z0pLcQJKzN05mw9vZoQHluVKj7HJfU" asynch defer </script>
 
 </body>
 </html>
