Community: add Info-Button

--- a/src/pages/community/community.html
+++ b/src/pages/community/community.html
@@ -8,5 +8,6 @@
   <div><label>Augenbeschwerden&nbsp;&nbsp;&nbsp;</label><img src="../assets/img/roterPunkt.png"></div>
   <div><label>Nasenbeschwerden&nbsp;&nbsp;&nbsp;</label><img src="../assets/img/blauerPunkt.png"></div>
   <div><label>Atembeschwerden&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label><img src="../assets/img/gruenerPunkt.png"></div>
+  <ion-icon #info (click)="showExplanation()" name="md-information-circle"></ion-icon>
   <div #map id="my-map"></div>
 </ion-content>
