--- a/src/pages/newEntry/medication/medication.html
+++ b/src/pages/newEntry/medication/medication.html
@@ -16,7 +16,7 @@
   <ion-list radio-group [(ngModel)]="questionMedication">
     <ion-item>
       <ion-label>Ja</ion-label>
-      <ion-select [(ngModel)]="questionMedicationWhy">
+      <ion-select [(ngModel)]="questionMedicationWhy" cancelText="Abbrechen">
         <ion-option>Vorbeugend</ion-option>
         <ion-option>Wegen Beschwerden</ion-option>
       </ion-select>
