--- a/src/pages/newEntry/physicalActivity/physicalActivity.html
+++ b/src/pages/newEntry/physicalActivity/physicalActivity.html
@@ -14,9 +14,9 @@
 </ion-card>
 
   <ion-item>
-    <ion-range min="0" max="10" [(ngModel)]="physicalActivity">
+    <ion-range min="0" max="15" pin="true"[(ngModel)]="physicalActivity">
       <ion-label range-left>0</ion-label>
-      <ion-label range-right>10</ion-label>
+      <ion-label range-right>15</ion-label>
     </ion-range>
   </ion-item>
 
