Introduction: set Done/Cancel to Speichern/Abbrechen

--- a/src/pages/introduction/allergy/allergy.html
+++ b/src/pages/introduction/allergy/allergy.html
@@ -20,7 +20,7 @@
   <ion-list radio-group [(ngModel)]="questionAllergy">
     <ion-item>
       <ion-label>Ja</ion-label>
-      <ion-select [(ngModel)]="bekannteAllergien" multiple="true">
+      <ion-select [(ngModel)]="bekannteAllergien" multiple="true" cancelText="Abbrechen">
         <ion-option>Ambrosia</ion-option>
         <ion-option>Ampfer</ion-option>
         <ion-option>Beifuss</ion-option>
