--- a/src/pages/introduction/remindertime/remindertime.html
+++ b/src/pages/introduction/remindertime/remindertime.html
@@ -18,7 +18,7 @@ Ich bin da, um Dir zu helfen, Deine täglichen Einträge zu erfassen
   </p>
   <ion-item>
        <ion-label>Zeit</ion-label>
-       <ion-datetime displayFormat="HH:mm" [(ngModel)]="date"></ion-datetime>
+       <ion-datetime displayFormat="HH:mm" [(ngModel)]="date" cancelText="Abbrechen" doneText="Speichern"></ion-datetime>
      </ion-item>
 
        <button ion-button (click)="pushFinishPage()">weiter</button>
