backward and forward button added

--- a/src/pages/introduction/allergy/allergy.html
+++ b/src/pages/introduction/allergy/allergy.html
@@ -47,4 +47,6 @@
     </ion-item>
   </ion-list>
 
-      <button ion-button (click)="pushTakingDrugPage()">weiter</button>
+  <button (click)="pushHomePage()" ion-button secondary icon-left><ion-icon name='close'></ion-icon>Abbrechen</button>
+
+  <button ion-button icon-right secondary (click)="pushTakingDrugPage()">Weiter<ion-icon name="ios-arrow-forward"></ion-icon></button>
