--- a/src/pages/introduction/heightweight/heightweight.html
+++ b/src/pages/introduction/heightweight/heightweight.html
@@ -29,5 +29,6 @@
     <ion-input placeholder="in kg"></ion-input>
   </ion-item>
 
+  <button (click)="pushHomePage()" ion-button secondary icon-left><ion-icon name='close'></ion-icon>Abbrechen</button>
 
-    <button ion-button (click)="pushJobPage()">weiter</button>
+  <button ion-button icon-right secondary (click)="pushJobPage()">Weiter<ion-icon name="ios-arrow-forward"></ion-icon></button>
