--- a/src/pages/introduction/introduction.html
+++ b/src/pages/introduction/introduction.html
@@ -21,5 +21,6 @@
 </ion-card>
   </p>
 
+  <button (click)="pushHomePage()" ion-button secondary icon-left><ion-icon name='close'></ion-icon>Abbrechen</button>
 
-  <button ion-button (click)="pushRewardPage()">weiter</button>
+  <button ion-button icon-right secondary (click)="pushRewardPage()">Weiter<ion-icon name="ios-arrow-forward"></ion-icon></button>
