--- a/src/pages/introduction/job/job.html
+++ b/src/pages/introduction/job/job.html
@@ -40,4 +40,6 @@
     </ion-select>
   </ion-item>
 
-  <button ion-button (click)="pushAllergyPage()">weiter</button>
+  <button (click)="pushHomePage()" ion-button secondary icon-left><ion-icon name='close'></ion-icon>Abbrechen</button>
+
+  <button ion-button icon-right secondary (click)="pushAllergyPage()">Weiter<ion-icon name="ios-arrow-forward"></ion-icon></button>
