--- a/src/pages/introduction/remindertime/remindertime.html
+++ b/src/pages/introduction/remindertime/remindertime.html
@@ -21,4 +21,7 @@ Ich bin da, um Dir zu helfen, Deine täglichen Einträge zu erfassen
        <ion-datetime displayFormat="HH:mm" [(ngModel)]="date" cancelText="Abbrechen" doneText="Speichern"></ion-datetime>
      </ion-item>
 
-       <button ion-button (click)="pushFinishPage()">weiter</button>
+
+       <button (click)="pushHomePage()" ion-button secondary icon-left><ion-icon name='close'></ion-icon>Abbrechen</button>
+
+       <button ion-button icon-right secondary (click)="pushFinishPage()">Weiter<ion-icon name="ios-arrow-forward"></ion-icon></button>
