--- a/src/pages/introduction/reward/reward.html
+++ b/src/pages/introduction/reward/reward.html
@@ -34,4 +34,6 @@
       </ion-item>
     </ion-list>
 
-  <button ion-button (click)="pushHeightWeightPage()">weiter</button>
+<button (click)="pushHomePage()" ion-button secondary icon-left><ion-icon name='close'></ion-icon>Abbrechen</button>
+
+<button ion-button icon-right secondary (click)="pushHeightWeightPage()">Weiter<ion-icon name="ios-arrow-forward"></ion-icon></button>
