--- a/src/pages/introduction/takingdrug/takingdrug.html
+++ b/src/pages/introduction/takingdrug/takingdrug.html
@@ -19,4 +19,6 @@ Hier kannst Du Deine Medikamente erfassen
 <button ion-button full (click)="scanMedBox()">Barcode scannen</button>
 <button ion-button full (click)="setMedicationWithoutScanning()">Nach Bezeichnung suchen</button>
 
-<button ion-button (click)="pushDrugPage()">weiter</button>
+<button (click)="pushHomePage()" ion-button secondary icon-left><ion-icon name='close'></ion-icon>Abbrechen</button>
+
+<button ion-button icon-right secondary (click)="pushDrugPage()">Weiter<ion-icon name="ios-arrow-forward"></ion-icon></button>
