Ally pictures added

--- a/src/pages/newEntry/medication/medication.html
+++ b/src/pages/newEntry/medication/medication.html
@@ -7,7 +7,7 @@
 <ion-content padding>
 
   <ion-card>
-    <img class="full-image" src="assets/img/AllyNormal.png"/>
+    <img class="full-image" src="assets/img/AllyAchtung.png"/>
   <ion-card-content>
     <p>Hast Du Medikamente eingenommen?</p>
   </ion-card-content>
