--- a/src/pages/newEntry/physicalActivity/physicalActivity.html
+++ b/src/pages/newEntry/physicalActivity/physicalActivity.html
@@ -7,7 +7,7 @@
 <ion-content padding>
 
   <ion-card>
-    <img class="full-image" src="assets/img/AllyNormal.png"/>
+    <img class="full-image" src="assets/img/AllyOh.png"/>
   <ion-card-content>
   <p>Wie stark hast Du Dich körperlich betätigt?</p>
 </ion-card-content>
