--- a/src/pages/newEntry/tips/tips.html
+++ b/src/pages/newEntry/tips/tips.html
@@ -6,7 +6,7 @@
 
 <ion-content padding>
   <ion-card>
-    <img class="full-image" src="assets/img/AllyNormal.png"/>
+    <img class="full-image" src="assets/img/AllyOk.png"/>
   <ion-card-content>
     <ion-card-title>Mein Tipp</ion-card-title>
          <p>Halte Dich wenig draussen auf.</p>
