--- a/src/pages/newEntry/totalPoints/totalPoints.html
+++ b/src/pages/newEntry/totalPoints/totalPoints.html
@@ -7,7 +7,7 @@
 <ion-content padding>
 
   <ion-card>
-    <img class="full-image" src="assets/img/AllyNormal.png"/>
+    <img class="full-image" src="assets/img/AllySuper.png"/>
   <ion-card-content>
   <p>Vielen Dank! Du hast soeben einen Punkt erhalten.</p>
   <p>Ich habe Deine Daten analysiert. Deine Beschwerden entsprechen
