--- a/src/pages/pollen/pollen.html
+++ b/src/pages/pollen/pollen.html
@@ -40,10 +40,10 @@
 
             <ion-row>
               <ion-col>
-                <ion-icon name="ios-flower-outline"></ion-icon>
+                <ion-icon name="ios-flower-outline" color="secondary"></ion-icon>
               </ion-col>
               <ion-col>
-                <ion-icon name="ios-flower-outline"></ion-icon>
+                <ion-icon name="ios-flower-outline" color="secondary"></ion-icon>
               </ion-col>
               <ion-col>
                 <ion-icon name="ios-flower"></ion-icon>
@@ -63,7 +63,7 @@
             </ion-row>
           </ion-grid>
         </ion-card>
-        <p>(Leeschlag)</p>
+        <p></p>
 
         <ion-card>
           <ion-grid>
@@ -137,7 +137,7 @@
 
             <ion-row>
               <ion-col>
-                <ion-icon name="ios-flower-outline"></ion-icon>
+                <ion-icon name="ios-flower-outline" color="secondary"></ion-icon>
               </ion-col>
               <ion-col>
                 <ion-icon name="ios-flower"></ion-icon>
@@ -160,7 +160,7 @@
             </ion-row>
           </ion-grid>
         </ion-card>
-        <p>(Leeschlag)</p>
+        <p></p>
 
         <ion-card>
           <ion-grid>
@@ -235,13 +235,13 @@
 
             <ion-row>
               <ion-col>
-                <ion-icon name="ios-flower-outline"></ion-icon>
+                <ion-icon name="ios-flower-outline" color="secondary"></ion-icon>
               </ion-col>
               <ion-col>
-                <ion-icon name="ios-flower-outline"></ion-icon>
+                <ion-icon name="ios-flower-outline" color="secondary"></ion-icon>
               </ion-col>
               <ion-col>
-                <ion-icon name="ios-flower"></ion-icon>
+                <ion-icon name="ios-flower" color="twitter"></ion-icon>
               </ion-col>
             </ion-row>
 
@@ -258,7 +258,7 @@
             </ion-row>
           </ion-grid>
         </ion-card>
-        <p>(Leeschlag)</p>
+        <p></p>
 
         <ion-card>
           <ion-grid>
@@ -308,6 +308,6 @@
       </ion-item>
     </ion-list>
   </div>
-  <button ion-button>Tim, spiel mit uns und komm ins nächste Level</button>
+
 
 </ion-content>
