--- a/src/pages/newEntry/complaints/complaints.html
+++ b/src/pages/newEntry/complaints/complaints.html
@@ -7,7 +7,7 @@
 <ion-content padding>
 
   <ion-card>
-    <img class="full-image" src="assets/img/AllyNormal.png"/>
+    <img class="full-image" src="assets/img/AllySauer.png"/>
   <ion-card-content>
     <p>Gib bitte spontan an, wie stark Deine Beschwerden sind?</p>
   </ion-card-content>
