--- a/src/pages/newEntry/dateTime/dateTime.html
+++ b/src/pages/newEntry/dateTime/dateTime.html
@@ -7,7 +7,7 @@
 <ion-content padding>
 
   <ion-card>
-    <img class="full-image" src="assets/img/AllyNormal.png"/>
+    <img class="full-image" src="assets/img/AllyTraurig.png"/>
   <ion-card-content>
       <p>Wann sind Deine Beschwerden aufgetreten?</p>
     </ion-card-content>
