add logo & change color buttons

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,6 +5,8 @@
 </ion-header>
 
 <ion-content padding>
+<img class="displayed" src="assets/img/LogoAlly.png"/>
+<ion-content padding>
   <button ion-button block (click)="pushNewEntryPage()">
     Neuer Eintrag</button>
   <button ion-button block (click)="pushOverviewPage()">
