modified button pinnwall

--- a/src/pages/pinwall/pinwall.html
+++ b/src/pages/pinwall/pinwall.html
@@ -26,13 +26,13 @@
   </ion-card-content>
   <ion-row>
     <ion-col>
-      <button ion-button icon-left clear small>
+      <button ion-button icon-left small>
         <ion-icon name="thumbs-up"></ion-icon>
         <div>12 Gefällt mir</div>
       </button>
     </ion-col>
     <ion-col>
-      <button ion-button icon-left clear small>
+      <button ion-button icon-left small>
         <ion-icon name="text"></ion-icon>
         <div>4 Kommentare</div>
       </button>
@@ -62,13 +62,13 @@
 </ion-card-content>
 <ion-row>
   <ion-col>
-    <button ion-button icon-left clear small>
+    <button ion-button icon-left small>
       <ion-icon name="thumbs-up"></ion-icon>
       <div>1 Gefällt mir</div>
     </button>
   </ion-col>
   <ion-col>
-    <button ion-button icon-left clear small>
+    <button ion-button icon-left small>
       <ion-icon name="text"></ion-icon>
       <div>1 Kommentare</div>
     </button>
