--- a/src/pages/pollen/pollen.html
+++ b/src/pages/pollen/pollen.html
@@ -22,7 +22,7 @@
           <ion-grid>
             <ion-row>
               <ion-col>
-                <ion-card-title>Pollenbelastung</ion-card-title>
+                <ion-card-title>aktuelle Pollenbelastung</ion-card-title>
               </ion-col>
             </ion-row>
 
@@ -46,7 +46,7 @@
                 <ion-icon name="ios-flower-outline" color="secondary"></ion-icon>
               </ion-col>
               <ion-col>
-                <ion-icon name="ios-flower"></ion-icon>
+                <ion-icon name="ios-flower" style="color:red;"></ion-icon>
               </ion-col>
             </ion-row>
 
@@ -119,7 +119,7 @@
           <ion-grid>
             <ion-row>
               <ion-col>
-                <ion-card-title>Pollenbelastung</ion-card-title>
+                <ion-card-title>aktuelle Pollenbelastung</ion-card-title>
               </ion-col>
             </ion-row>
 
@@ -217,7 +217,7 @@
           <ion-grid>
             <ion-row>
               <ion-col>
-                <ion-card-title>Pollenbelastung</ion-card-title>
+                <ion-card-title>aktuelle Pollenbelastung</ion-card-title>
               </ion-col>
             </ion-row>
 
